# tidal

./: .gitignore  Cargo.toml  LICENSE
projects/test/: tidal.json
tidal-core/: Cargo.toml  code.rs
tidal-core/derive/: Cargo.toml
tidal-core/derive/src/: evaluator_attributes.rs  evaluator_data_type.rs  evaluator_impl.rs  evaluator_input.rs  evaluator_input_default_value.rs  evaluator_output.rs  helper.rs  lib.rs
tidal-core/src/: animation.rs  app.rs  demo.rs  engine.rs  lib.rs  macros.rs  math.rs  resource.rs
tidal-core/src/engine/: di.rs  engine.rs  mod.rs  tick.rs
tidal-core/src/graph/: describe.rs  graph.rs  ids.rs  mod.rs  node.rs  operators.rs  runner.rs
tidal-core/src/interpreter/: evaluator.rs  interpreter.rs  mod.rs  value.rs
tidal-core/src/operator/: input.rs  math.rs  mod.rs  operator.rs  output.rs  registry.rs  render.rs
tidal-core/src/renderer/: buffers.rs  camera_uniform.rs  mesh.rs  mod.rs  renderer.rs  sampler_cache.rs  scene.rs  screen_render_pass.rs  screen_render_pass.wgsl  shader.rs  texture.rs
tidal-editor/: Cargo.toml
tidal-editor/src/: app.rs  color.rs  drag.rs  interpreter_holder.rs  main.rs  spash.rs  undo.rs
tidal-editor/src/compiler/: compiler.rs  emitter_builder.rs  frame.rs  mod.rs  output_usage_tracker.rs  resource_allocator.rs
tidal-editor/src/containers/: mod.rs  zoom.rs
tidal-editor/src/node_editor/: connection.rs  mod.rs  node.rs  node_editor.rs  node_editor_state.rs  picker.rs
tidal-editor/src/node_inspector/: mod.rs
tidal-editor/src/project/: mod.rs  project.rs  recent.rs  save_dialog.rs
tidal-editor/src/resource/: manager.rs  mod.rs
tidal-editor/src/state/: graph.rs  mod.rs  store.rs
tidal-editor/src/viewport/: callback.rs  mod.rs  resource.rs  resource.wgsl
tidal-editor/src/widget/: mod.rs
tidal-player/: Cargo.toml
tidal-player/src/: main.rs  shader.wgsl
