[workspace]
members = [
    "tidal-editor",
    "tidal-core",
    "tidal-player",
]

[workspace.package]
version = "0.1.0"
authors = ["Victor Lima <victorfrancovl@gmail.com>"]
edition = "2021"

[workspace.dependencies]

# Procedural macro dependencies
proc-macro2 = "1.0.58"
quote = "1.0"
syn = { version = "2.0.16", features = ["full"] }
darling = "0.20.1"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }

# Logging
env_logger = "0.10"
log = "0.4"

# WGPU
wgpu = { version = "0.17.0", features = ["naga", "glsl"] }

# Utils
derive_more = "0.99.17"
thiserror = "1.0.40"
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "serde"] }
delegate = "0.10.0"
bytemuck = { version = "1.14", features = ["derive"] }
